--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "steve-han-photography",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Photography portfolio website built with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Steve Han <stevehanstudio@gmail.com>",
   "dependencies": {
     "@styled-icons/fa-solid": "^10.10.0",
     "airtable": "^0.8.1",
