--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "gatsby": "^2.23.12",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.9",
-    "gatsby-plugin-algolia": "^0.11.1",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
@@ -20,6 +19,7 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-airtable": "^2.1.1",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-cloudinary": "^1.0.1",
     "gatsby-transformer-sharp": "^2.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
