--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-airtable": "^2.1.1",
+    "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-cloudinary": "^1.0.1",
     "gatsby-transformer-sharp": "^2.5.7",
