--- a/package.json
+++ b/package.json
@@ -5,39 +5,37 @@
   "version": "0.1.0",
   "author": "Steve Han <stevehanstudio@gmail.com>",
   "dependencies": {
-    "@styled-icons/fa-solid": "^10.10.0",
-    "airtable": "^0.8.1",
-    "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.23.12",
-    "gatsby-background-image": "^1.1.1",
-    "gatsby-image": "^2.4.9",
-    "gatsby-plugin-manifest": "^2.4.14",
-    "gatsby-plugin-offline": "^3.2.13",
+    "@styled-icons/fa-solid": "^10.18.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "gatsby": "^2.24.58",
+    "gatsby-background-image": "^1.1.2",
+    "gatsby-image": "^2.4.17",
+    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.6",
-    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.35",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-cloudinary": "^0.1.14",
-    "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-source-filesystem": "^2.3.29",
     "gatsby-transformer-cloudinary": "^1.0.1",
-    "gatsby-transformer-sharp": "^2.5.7",
+    "gatsby-transformer-sharp": "^2.5.14",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.10.0",
-    "react-instantsearch-dom": "^6.6.0",
-    "styled-components": "^5.1.1"
+    "react-icons": "^3.11.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^2.1.1"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "CI= gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
