--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.24.58",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.17",
+    "gatsby-plugin-google-fonts-v2": "0.0.6",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
