--- a/package.json
+++ b/package.json
@@ -7,26 +7,30 @@
   "dependencies": {
     "@styled-icons/fa-solid": "^10.18.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.58",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-google-fonts-v2": "0.0.6",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.35",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^2.3.29",
     "gatsby-transformer-cloudinary": "^1.0.1",
     "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby-transformer-yaml": "^2.4.11",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
-    "styled-components": "^5.2.0"
+    "react-images": "^1.1.7",
+    "react-photo-gallery": "^8.0.0",
+    "styled-components": "^5.2.0",
+    "styled-normalize": "^8.0.7",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
     "prettier": "^2.1.1"
