Added Google Analytics and Tag Manager and Sitemap generator and test runned production build.

--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "@styled-icons/fa-solid": "^10.18.0",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.58",
+    "gatsby": "^2.24.62",
     "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.17",
+    "gatsby-image": "^2.4.19",
+    "gatsby-plugin-google-analytics": "^2.3.14",
     "gatsby-plugin-google-fonts-v2": "0.0.6",
-    "gatsby-plugin-manifest": "^2.4.28",
-    "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.35",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.29",
+    "gatsby-plugin-google-tagmanager": "^2.3.12",
+    "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby-plugin-offline": "^3.2.28",
+    "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-sitemap": "^2.4.13",
+    "gatsby-plugin-styled-components": "^3.3.11",
+    "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-cloudinary": "^1.0.1",
-    "gatsby-transformer-sharp": "^2.5.14",
-    "gatsby-transformer-yaml": "^2.4.11",
+    "gatsby-transformer-sharp": "^2.5.15",
+    "gatsby-transformer-yaml": "^2.4.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -33,7 +36,7 @@
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.2"
   },
   "keywords": [
     "gatsby"
