Add Portfolios sub-menu

--- a/src/portfolios/portfolios.yml
+++ b/src/portfolios/portfolios.yml
@@ -42,7 +42,7 @@
     caption: Charleston and Hanna running
 - title: portrait
   slug: /portrait
-  description: Portrait photograpphy is about capturing the essence of a person.
+  description: Portrait photograpphy ranges from capturing the spirit or essence of a person to a professional headshot for conveying a message of confidence or openess.  It can be fashion inspired or it can be capture a person at their natural state of being.
   photos:
   - name: portrait-1-CharlestonRunningforSuccess
     caption: Charleston Pierce Running for Success.  Model, actor, model coach, fashion show producer, motivation speaker Charleston Pierce is full of energy.
