--- a/src/portfolios/portfolios.yml
+++ b/src/portfolios/portfolios.yml
@@ -2,75 +2,165 @@
   slug: /travel
   description: My journey as photographer began with my travels.
   photos:
-  - name: travel-1-WhiteDessertEgypt20305
-    caption: The White Dessert in Egypt
+  - name: travel-01-WhiteDessertEgypt20305
+    caption: The White Dessert in Egypt 2005.
+  - name: travel-02-NewYearsEveViewPearlTowerLobbyGrandHyatt
+    caption: Pearl Tower, Shanghai from the lobby of Grand Hyatt.  China trip New Years Eve 2002, a trip that inspired me to work with light in dark environment.
+  - name: travel-03-ColosseumRome
+    caption: Colosseum in Rome 2011.  Shot with fisheye lens.
 - title: music
   slug: /music
-  description: Music was an inspiration in getting me hooked to photography that resulted in over a decade of covering electronic dance music events in San Francisco, across the States, and around the World.  For more of my pictures from covering the dance music scenes, stayed tuned for the relaunch of stevehanphoto.com.
+  description: Music was an inspiration in getting me hooked to photography that resulted in over a decade of covering electronic dance music events in San Francisco, across the States, and around the World.  Managing the website, eventvibe.com.  For more of my pictures from covering the dance music scenes, stayed tuned for the relaunch of stevehanphoto.com.
   photos:
-    - name: music-1-SanderVanDoornPOP033112
-      caption: Sander Van Doorn at Skill's ETD POP on 3/31/12
-    - name: music-2-SDMF071406
-      caption: I loved foam parties but have not seen them for years until I travelled to Estonia to photographing the Sun Dance Music Festival in 2006.
+  - name: music-01-SanderVanDoornPOP033112
+    caption: Sander Van Doorn at Skill's ETD POP 3/31/12
+  - name: music-02-SDMF071406
+    caption: Foam party at the Sun Dance Music Festival in Tallinn, Estonia 2006.
+  - name: music-03-TriggerSFWhiteParty040310
+    caption: White Party at Trigger in San Francisco 4/30/10.
+  - name: music-04-PachaIbiza071503
+    caption: Club Pacha, Ibiza, Spain 7/15/03.  My first of 3 trips to Ibiza.
+  - name: music-05-MorilloSubliminalSpaceMiami032305
+    caption: Erick Morillo at Club Space in Miami during the Winter Music Conference 3/32/05.
+  - name: music-06-Eventvibe.comPoolPartySFLoveParade100204
+    caption: San Francisco Love Parade 10/2/04.  I produced an eventvibe.com party the day after.
+  - name: music-07-Eventvibe.comPoolPartyIbizaHotel2004
+    caption: Flyer for the Eventvibe.com Pool party 10/3/04 making use of pool party photos from Miami Winter Conference 2003.  
+  - name: music-08-MezzanineSFKaskadeRemedy10Year
+    caption: Kaskade at The Mezzanine in San Francisco.
+  - name: music-09-SFPopArminVanBuuren
+    caption: Armin Van Burren at ETD Pop
+  - name: music-10-burningman090405
+    caption: Burning Man 2005.
+  - name: music-11-TiestoBurningman090405
+    caption: Guest DJ Tiesto at the Opulent Temple at Burning Man 2005.
+  - name: music-12-SFOpulentMassiveTreasureIsland030609
+    caption: Liam Shy at Opulent Massive on Treasure Island.
+  - name: music-13-SF1015RaindanceChineseNewYear012706
+    caption: Raindance Chinese New Year at 1015 Folsom 1/27/06
+  - name: music-14-SFMezzanineOM10Year020306
+    caption: Mark Farina at OM Records 10 Year Anniversary at The Mezzanine 2/3/06.
+  - name: music-15-CocoBongo010611
+    caption: Bongo Bongo at Playa del Carmen.
+  - name: music-16-NYECocoBongoPlayadelCarmen010511
+    caption: Every night is New Years Eve at Coco Bongo.
+  - name: music-17-Lime072510
+    caption: Lime in San Francisco 7/25/10.
 - title: fashion
   slug: /fashion
-  description: I got in to fashion through covering fashion shows and as I got in to photo shoots I learned that photographing fashion is about coming up with the concept, collaboration between the designers, makeup artists and models, and conveying the mood.
+  description: Through covering fashion shows, I got in to fashion photography.  I learned that photographing fashion is about coming up with the concept, collaboration between the designers, makeup artists and models, and conveying the mood.
   photos:
-    - name: fashion-1-BenSammieKateKnuvelderKenChen
-      caption: Models Ben and Sammie in designers Ken Chen and jewelry designer Kate Knuvelder's chainmail necklace
-    - name: fashion-2-ScarlettLaceyBannister
-      caption: Model Scarlett Lash in designer Lacey Bannister's head dress
-    - name: fashion-3-ScarlettLaceyBannister2
-      caption: Model Scarlett Lash in designer Lacey Bannister's head dress
-    - name: fashion-4-CharlestonPierceFashionShow1
-      caption: Charleston Pierce Fashion Show - Evening wear
-    - name: fashion-5-CharlestonPierceFashionShow2
-      caption: Charleston Pierce Fashion Show - Swimwear
-    - name: fashion-6-JessicaKateKnuvelder
-      caption: Jessica in designer Kate Knuvelder's chainmail head piece  
-    - name: fashion-7-KateKnuvelderBlackV051212
-      caption: Model in designer Kate Knuvelder's chainmail head piece at Black V Fashion Show 5/12/12
-    - name: fashion-8-MichelleBenBW
-      caption: Models Michelle Grey and Ben
+  - name: fashion-01-BenSammieKateKnuvelderKenChen
+    caption: Models Benjamin Kline and Sammie Smith in designer Ken Chen and jewelry designer Kate Knuvelder.
+  - name: fashion-02-CharlestonPierceFashionShow1
+    caption: Charleston Pierce Fashion Show - Evening wear.
+  - name: fashion-03-CharlestonPierceFashionShow2
+    caption: Charleston Pierce Fashion Show - Swimwear.
+  - name: fashion-04-MoniqueZhangWearableArt
+    caption: Designer Monique Zhang.  Spirit painting by Joshua Bernstein.  From Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.
+  - name: fashion-05-MicheleGatesWearableArt
+    caption: Socialite Michele Gates.  Designer Monique Zhang's Wearable Art.
+  - name: fashion-06-ScarlettLaceyBannister
+    caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
+  - name: fashion-07-ScarlettLaceyBannister2
+    caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
+  - name: fashion-08-KateKnuvelderBlackV051212
+    caption: Model Jessica Sanchez.  Designer Kate Knuvelder's chainmail head piece.  
+  - name: fashion-09-JessicaKateKnuvelder
+    caption: Black V Fashion Show.  Designer Kate Knuvelder's chainmail head piece 5/12/12.
+  - name: fashion-10-MichelleBenBW
+    caption: Models Michelle Grey and Benjamin Kline.
 - title: lifestyle
   slug: /lifestyle
   description: Lifestyle photography is about collaboration to convey a certain lifestyle.
   photos:
-  - name: lifestyle-1-KennethShaiShopping
-    caption: Shopping in Union Square.  Models - Kenneth Roebuck and Shai White
-  - name: lifestyle-2-CharlestonHannaRunning012512
-    caption: Charleston and Hanna running
+  - name: lifestyle-01-MichelleBen
+    caption: Models Michelle Grey and Benjamin Kline.
+  - name: lifestyle-02-CharlestonHannaRunning012512
+    caption: Secret Agents.  Charleston Pierce and Hannah Rose.
+  - name: lifestyle-03-KennethShaiShopping
+    caption: Shopping in Union Square.  Models Kenneth Roebuck and Shai White.
+  - name: lifestyle-04-CloudPacifica042812
+    caption: Model Actor Cloud Mykals, Pacifica.
+  - name: lifestyle-05-CloudJumpingElbow
+    caption: Cloud Mykals Treasure Island.
+  - name: lifestyle-06-BusinessTripHailey
+    caption: Business Trip.  Model Actress Hailey Laserna.  Make-up artist Heather Bird O'Connell.  
+  - name: lifestyle-07-BusinessTripHailey
+    caption: Business Trip.  Model Actress Hailey Laserna.  Make-up artist Heather Bird O'Connell.
+  - name: lifestyle-08-OlyaLeslie
+    caption: Sharing with your mobile phones.  Model Leslie Fu.  Creative direction Olya Rostov.
 - title: portrait
   slug: /portrait
-  description: Portrait photograpphy ranges from capturing the spirit or essence of a person to a professional headshot for conveying a message of confidence or openess.  It can be fashion inspired or it can be capture a person at their natural state of being.
+  description: An astrologist once told me she sees me getting in to portrait photography, capturing the soul of a person.  Portrait photograpphy ranges from capturing the spirit or essence of a person to a professional headshot for conveying a message of confidence or openess.  It can be fashion inspired or it can be capture a person at their natural state of being.
   photos:
-  - name: portrait-1-CharlestonRunningforSuccess
-    caption: Charleston Pierce Running for Success.  Model, actor, model coach, fashion show producer, motivation speaker Charleston Pierce is full of energy.
-  - name: portrait-2-CharlestonPierceStarWalkBookCover
-    caption: Book cover for Charleston Pierce's Star Walk
+  - name: portrait-01-CharlestonRunningforSuccess
+    caption: Model, actor, model coach, fashion show producer, motivation speaker Charleston Pierce running for Success.
+  - name: portrait-02-CharlestonPierceStarWalkBookCover
+    caption: Book cover of Charleston Pierce's Star Walk
+  - name: portrait-03-Daisey Berns headshot for UploadVR
+    caption: Headshot UploadVR.
+  - name: portrait-04-Az Balabanian headshot for UploadVR
+    caption: Headshot UploadVR.
+  - name: portrait-05-Lydia
+    caption: Business headshot.
+  - name: portrait-06-KennethRoebuck2
+    caption: Fitness.
+  - name: portrait-07-KennethRoebuck
+    caption: Dance.
+  - name: portrait-08-IssacMunozBW
+    caption: Low key B&W.
+  - name: portrait-09-LotusThief
+    caption: Lotus Thief band album promo.
+  - name: portrait-10-wheelhouse
+    caption: Wheelhouse SF yoga, core, strength, indoor cycling studio. 
+  - name: portrait-11-Aubrey
+    caption: Window light.
+  - name: portrait-12-YanaHeadshot2
+    caption: Professional headshot.
+  - name: portrait-13-YanaHeadshot
+    caption: Professional headshot.
+- title: techEvents
+  slug: /techEvents
+  description: Technology conferences, meetups, and hackathons.  In 2017??, I started exploring .  Photographing events will an inspiration to see what the possibilities are.  Virtual reality had inspired me to want to get back to developing technology.  I co-founded a podcast on VR, DopamineVR.com and started covering meetups and GDC.
+  photos:
+  - name: techEvents-01-ChrisMurphyNiagraUnrealEngineGDC2019
+    caption: Chris Murphy giving presentation on Niagra VFX at Unreal Engine Learning Theater at GDC 2019
+  - name: techEvents-02-MikeySiegelConsciousnessVRmeetupUploadVR021917
+    caption: Mikey Siegel at the Consciousness VR meetup at Upload VR
+  - name: techEvents-03-Xtech051816
+    caption: XTech 2016.  Experience Technology and NeuroGaming Conference and Expo.
+  - name: techEvents-04-EmotivDemoXTech051816
+    caption: Emotive demo at XTech 2016.
+  - name: techEvents-05-TimFerrisAdamGazzaley
+    caption: Tim Ferris and Adam Gazzaley at XTech 2016.
+  - name: techEvents-06-AdamGazzaleyJazzVenturesXtech051816
+    caption: Adam Gazzaley at Ztech 2016.
+  - name: techEvents-07-XTech051716
+    caption: XTech 2016.
+  - name: techEvents-08-XTechHackathon051416
+    caption: XTech hackathon 2016.
+  - name: techEvents-09-XtechHackathon051416
+    caption: XTech hackathon 2016.
+  - name: techEvents-10-XtechHackathon051516
+    caption: XTech hackathon 2016.
 - title: restaurants
   slug: /restaurants
   description: Food, drinks, architectures photographing in restaurants and bars.
   photos:
-    - name: restaurants-1-BlueDoor1
-      caption: Cured Meat Appetizer Board at The Blue Door Restaurant
-    - name: restaurants-2-BlueDoor2
-      caption: Chocolate cake at The Blue Door Restaurant
-    - name: restaurants-3-BlueDoor3
-      caption: Vanilla crème brûlée with vanilla whipped cream, raspberries, cardamon short bread cookies at The Blue Door Restaurant
-    - name: restaurants-4-ThirstyBearRestaurantInterior
-      caption: One of the first restaurants I shot was the Thirsty Bear Brewing Company.
-    - name: restaurants-5-LaMar
-      caption: Salmon at La Mar Cebicheria Peruana
-    - name: restaurants-6-LaMar2
-      caption: Ahi Tuna at La Mar Cebicheria Peruana
-    - name: restaurants-7-LaMar3
-      caption: Appetizer at La Mar Cebicheria Peruana
-- title: techevents
-  slug: /techevents
-  description: Technology conferences, meetups, and hackathons.  In 2017??, I started exploring .  Photographing events will an inspiration to see what the possibilities are.  Virtual reality had inspired me to want to get back to developing technology.  I co-founded a podcast on VR, DopamineVR.com and started covering meetups and GDC.
-  photos:
-    - name: techevents-1-ChrisMurphyNiagraUnrealEngineGDC2019.jpg
-      caption: Chris Murphy giving presentation on Niagra VFX at Unreal Engine Learning Theater at GDC 2019
+  - name: restaurants-01-BlueDoor1
+    caption: Cured Meat Appetizer Board at The Blue Door Restaurant
+  - name: restaurants-02-BlueDoor2
+    caption: Chocolate cake at The Blue Door Restaurant
+  - name: restaurants-03-BlueDoor3
+    caption: Vanilla crème brûlée with vanilla whipped cream, raspberries, cardamon short bread cookies at The Blue Door Restaurant
+  - name: restaurants-04-ThirstyBearRestaurantInterior
+    caption: One of the first restaurants I shot was the Thirsty Bear Brewing Company.
+  - name: restaurants-05-LaMar
+    caption: Salmon at La Mar Cebicheria Peruana
+  - name: restaurants-06-LaMar2
+    caption: Ahi Tuna at La Mar Cebicheria Peruana
+  - name: restaurants-07-LaMar3
+    caption: Appetizer at La Mar Cebicheria Peruana
 
 
