--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^3.11.0",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
+    "react-player": "^2.6.2",
     "styled-components": "^5.2.0",
     "styled-normalize": "^8.0.7",
     "theme-ui": "^0.3.1"
