Added more photos to travel portfolio and updated YAML.

--- a/src/portfolios/portfolios.yml
+++ b/src/portfolios/portfolios.yml
@@ -4,10 +4,18 @@
   photos:
   - name: travel-01-WhiteDessertEgypt20305
     caption: The White Dessert in Egypt 2005.
-  - name: travel-02-NewYearsEveViewPearlTowerLobbyGrandHyatt
+  - name: travel-02-HuangshanMountains
+    caption: Huangshan Mountains China 2002.
+  - name: travel-03-NewYearsEveViewPearlTowerLobbyGrandHyatt
     caption: Pearl Tower, Shanghai from the lobby of Grand Hyatt.  China trip New Years Eve 2002, a trip that inspired me to work with light in dark environment.
-  - name: travel-03-ColosseumRome
+  - name: travel-04-TreviFountains
+    caption: Trevi Fountain, Rome, Italy 2011. 
+  - name: travel-05-ColosseumRome
     caption: Colosseum in Rome 2011.  Shot with fisheye lens.
+  - name: travel-06-PonteVecchioFlorence
+    caption: Ponte Vecchio, Florence, Italy 2011.
+  - name: travel-07-MasqueradeMasksVenice
+    caption: Masquerade Masks, Venice, Italy 2011.
 - title: music
   slug: /music
   description: Music was an inspiration in getting me hooked to photography that resulted in over a decade of covering electronic dance music events in San Francisco, across the States, and around the World.  Managing the website, eventvibe.com.  For more of my pictures from covering the dance music scenes, stayed tuned for the relaunch of stevehanphoto.com.
