Added video portfolio

--- a/src/portfolios/portfolios.yml
+++ b/src/portfolios/portfolios.yml
@@ -4,173 +4,256 @@
   photos:
   - name: travel-01-WhiteDessertEgypt20305
     caption: The White Dessert in Egypt 2005.
+    videoUrl: ~
   - name: travel-02-HuangshanMountains
     caption: Huangshan Mountains China 2002.
+    videoUrl: ~
   - name: travel-03-NewYearsEveViewPearlTowerLobbyGrandHyatt
     caption: Pearl Tower, Shanghai from the lobby of Grand Hyatt.  China trip New Years Eve 2002, a trip that inspired me to work with light in dark environment.
+    videoUrl: ~
   - name: travel-04-TreviFountains
     caption: Trevi Fountain, Rome, Italy 2011. 
+    videoUrl: ~
   - name: travel-05-ColosseumRome
     caption: Colosseum in Rome 2011.  Shot with fisheye lens.
+    videoUrl: ~
   - name: travel-06-PonteVecchioFlorence
     caption: Ponte Vecchio, Florence, Italy 2011.
+    videoUrl: ~
   - name: travel-07-MasqueradeMasksVenice
     caption: Masquerade Masks, Venice, Italy 2011.
+    videoUrl: ~
 - title: music
   slug: /music
   description: Music was an inspiration in getting me hooked to photography that resulted in over a decade of covering electronic dance music events in San Francisco, across the States, and around the World.  Managing the website, eventvibe.com.  For more of my pictures from covering the dance music scenes, stayed tuned for the relaunch of stevehanphoto.com.
   photos:
   - name: music-01-SanderVanDoornPOP033112
     caption: Sander Van Doorn at Skill's ETD POP 3/31/12
+    videoUrl: ~
   - name: music-02-SDMF071406
     caption: Foam party at the Sun Dance Music Festival in Tallinn, Estonia 2006.
+    videoUrl: ~
   - name: music-03-TriggerSFWhiteParty040310
     caption: White Party at Trigger in San Francisco 4/30/10.
+    videoUrl: ~
   - name: music-04-PachaIbiza071503
     caption: Club Pacha, Ibiza, Spain 7/15/03.  My first of 3 trips to Ibiza.
+    videoUrl: ~
   - name: music-05-MorilloSubliminalSpaceMiami032305
     caption: Erick Morillo at Club Space in Miami during the Winter Music Conference 3/32/05.
+    videoUrl: ~
   - name: music-06-Eventvibe.comPoolPartySFLoveParade100204
     caption: San Francisco Love Parade 10/2/04.  I produced an eventvibe.com party the day after.
+    videoUrl: ~
   - name: music-07-Eventvibe.comPoolPartyIbizaHotel2004
     caption: Flyer for the Eventvibe.com Pool party 10/3/04 making use of pool party photos from Miami Winter Conference 2003.  
+    videoUrl: ~
   - name: music-08-MezzanineSFKaskadeRemedy10Year
     caption: Kaskade at The Mezzanine in San Francisco.
+    videoUrl: ~
   - name: music-09-SFPopArminVanBuuren
     caption: Armin Van Burren at ETD Pop
+    videoUrl: ~
   - name: music-10-burningman090405
     caption: Burning Man 2005.
+    videoUrl: ~
   - name: music-11-TiestoBurningman090405
     caption: Guest DJ Tiesto at the Opulent Temple at Burning Man 2005.
+    videoUrl: ~
   - name: music-12-SFOpulentMassiveTreasureIsland030609
     caption: Liam Shy at Opulent Massive on Treasure Island.
+    videoUrl: ~
   - name: music-13-SF1015RaindanceChineseNewYear012706
     caption: Raindance Chinese New Year at 1015 Folsom 1/27/06
+    videoUrl: ~
   - name: music-14-SFMezzanineOM10Year020306
     caption: Mark Farina at OM Records 10 Year Anniversary at The Mezzanine 2/3/06.
+    videoUrl: ~
   - name: music-15-CocoBongo010611
     caption: Bongo Bongo at Playa del Carmen.
+    videoUrl: ~
   - name: music-16-NYECocoBongoPlayadelCarmen010511
     caption: Every night is New Years Eve at Coco Bongo.
+    videoUrl: ~
   - name: music-17-Lime072510
     caption: Lime in San Francisco 7/25/10.
+    videoUrl: ~
 - title: fashion
   slug: /fashion
   description: Through covering fashion shows, I got in to fashion photography.  I learned that photographing fashion is about coming up with the concept, collaboration between the designers, makeup artists and models, and conveying the mood.
   photos:
   - name: fashion-01-BenSammieKateKnuvelderKenChen
     caption: Models Benjamin Kline and Sammie Smith in designer Ken Chen and jewelry designer Kate Knuvelder.
+    videoUrl: ~
   - name: fashion-02-CharlestonPierceFashionShow1
     caption: Charleston Pierce Fashion Show - Evening wear.
+    videoUrl: ~
   - name: fashion-03-CharlestonPierceFashionShow2
     caption: Charleston Pierce Fashion Show - Swimwear.
+    videoUrl: ~
   - name: fashion-04-MoniqueZhangWearableArt
     caption: Designer Monique Zhang.  Spirit painting by Joshua Bernstein.  From Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.
+    videoUrl: ~
   - name: fashion-05-MicheleGatesWearableArt
     caption: Socialite Michele Gates.  Designer Monique Zhang's Wearable Art.
+    videoUrl: ~
   - name: fashion-06-ScarlettLaceyBannister
     caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
+    videoUrl: ~
   - name: fashion-07-ScarlettLaceyBannister2
     caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
+    videoUrl: ~
   - name: fashion-08-KateKnuvelderBlackV051212
     caption: Model Jessica Sanchez.  Designer Kate Knuvelder's chainmail head piece.  
+    videoUrl: ~
   - name: fashion-09-JessicaKateKnuvelder
     caption: Black V Fashion Show.  Designer Kate Knuvelder's chainmail head piece 5/12/12.
+    videoUrl: ~
   - name: fashion-10-MichelleBenBW
     caption: Models Michelle Grey and Benjamin Kline.
+    videoUrl: ~
 - title: lifestyle
   slug: /lifestyle
   description: Lifestyle photography is about collaboration to convey a certain lifestyle.
   photos:
   - name: lifestyle-01-MichelleBen
     caption: Models Michelle Grey and Benjamin Kline.
+    videoUrl: ~
   - name: lifestyle-02-CharlestonHannaRunning012512
     caption: Secret Agents.  Charleston Pierce and Hannah Rose.
+    videoUrl: ~
   - name: lifestyle-03-KennethShaiShopping
     caption: Shopping in Union Square.  Models Kenneth Roebuck and Shai White.
+    videoUrl: ~
   - name: lifestyle-04-OlyaLeslie
     caption: Sharing with your mobile phones.  Model Leslie Fu.  Creative direction Olya Rostov.
+    videoUrl: ~
   - name: lifestyle-05-CloudPacifica042812
     caption: Model Actor Cloud Mykals, Pacifica.
+    videoUrl: ~
   - name: lifestyle-06-CloudMykalsCrewPacifica042812
     caption: Walking with Purpose.
+    videoUrl: ~
   - name: lifestyle-07-CloudJumpingElbow
     caption: Cloud Mykals Treasure Island.
+    videoUrl: ~
   - name: lifestyle-08-BusinessTripHailey
     caption: Business Trip.  Model Actress Hailey Laserna.  Make-up artist Heather Bird O'Connell.  
+    videoUrl: ~
   - name: lifestyle-09-BusinessTripHailey
     caption: Getting your workout in on business trip.  Model Actress Hailey Laserna.  Make-up artist Heather Bird O'Connell.
+    videoUrl: ~
 - title: portrait
   slug: /portrait
   description: An astrologist once told me she sees me getting in to portrait photography, capturing the soul of a person.  Portrait photograpphy ranges from capturing the spirit or essence of a person to a professional headshot for conveying a message of confidence or openess.  It can be fashion inspired or it can be capture a person at their natural state of being.
   photos:
   - name: portrait-01-CharlestonRunningforSuccess
     caption: Model, actor, model coach, fashion show producer, motivation speaker Charleston Pierce running for Success.
+    videoUrl: ~
   - name: portrait-02-CharlestonPierceStarWalkBookCover
     caption: Book cover of Charleston Pierce's Star Walk
+    videoUrl: ~
   - name: portrait-03-Daisey Berns headshot for UploadVR
     caption: Headshot UploadVR.
+    videoUrl: ~
   - name: portrait-04-Az Balabanian headshot for UploadVR
     caption: Headshot UploadVR.
+    videoUrl: ~
   - name: portrait-05-Lydia
-    caption: Business headshot.
+    caption: Business portrait.
+    videoUrl: ~
   - name: portrait-06-KennethRoebuck2
     caption: Fitness.
+    videoUrl: ~
   - name: portrait-07-KennethRoebuck
     caption: Dance.
+    videoUrl: ~
   - name: portrait-08-IssacMunozBW
     caption: Low key B&W.
+    videoUrl: ~
   - name: portrait-09-LotusThief
     caption: Lotus Thief band album promo.
+    videoUrl: ~
   - name: portrait-10-wheelhouse
     caption: Wheelhouse SF yoga, core, strength, indoor cycling studio. 
+    videoUrl: ~
   - name: portrait-11-Aubrey
     caption: Window light.
+    videoUrl: ~
   - name: portrait-12-YanaHeadshot2
     caption: Professional headshot.
+    videoUrl: ~
   - name: portrait-13-YanaHeadshot
     caption: Professional headshot.
+    videoUrl: ~
 - title: techEvents
   slug: /techEvents
   description: Technology conferences, meetups, and hackathons.  In 2017??, I started exploring .  Photographing events will an inspiration to see what the possibilities are.  Virtual reality had inspired me to want to get back to developing technology.  I co-founded a podcast on VR, DopamineVR.com and started covering meetups and GDC.
   photos:
   - name: techEvents-01-ChrisMurphyNiagraUnrealEngineGDC2019
     caption: Chris Murphy giving presentation on Niagra VFX at Unreal Engine Learning Theater at GDC 2019
+    videoUrl: ~
   - name: techEvents-02-MikeySiegelConsciousnessVRmeetupUploadVR021917
     caption: Mikey Siegel at the Consciousness VR meetup at Upload VR
+    videoUrl: ~
   - name: techEvents-03-Xtech051816
     caption: XTech 2016.  Experience Technology and NeuroGaming Conference and Expo.
+    videoUrl: ~
   - name: techEvents-04-EmotivDemoXTech051816
     caption: Emotive demo at XTech 2016.
+    videoUrl: ~
   - name: techEvents-05-TimFerrisAdamGazzaley
     caption: Tim Ferris and Adam Gazzaley at XTech 2016.
+    videoUrl: ~
   - name: techEvents-06-AdamGazzaleyJazzVenturesXtech051816
     caption: Adam Gazzaley at Ztech 2016.
+    videoUrl: ~
   - name: techEvents-07-XTech051716
     caption: XTech 2016.
+    videoUrl: ~
   - name: techEvents-08-XTechHackathon051416
     caption: XTech hackathon 2016.
+    videoUrl: ~
   - name: techEvents-09-XtechHackathon051416
     caption: XTech hackathon 2016.
+    videoUrl: ~
   - name: techEvents-10-XtechHackathon051516
     caption: XTech hackathon 2016.
+    videoUrl: ~
 - title: restaurants
   slug: /restaurants
   description: Food, drinks, architectures photographing in restaurants and bars.
   photos:
   - name: restaurants-01-BlueDoor1
     caption: Cured Meat Appetizer Board at The Blue Door Restaurant
+    videoUrl: ~
   - name: restaurants-02-BlueDoor2
     caption: Chocolate cake at The Blue Door Restaurant
+    videoUrl: ~
   - name: restaurants-03-BlueDoor3
     caption: Vanilla crème brûlée with vanilla whipped cream, raspberries, cardamon short bread cookies at The Blue Door Restaurant
+    videoUrl: ~
   - name: restaurants-04-ThirstyBearRestaurantInterior
     caption: One of the first restaurants I shot was the Thirsty Bear Brewing Company.
+    videoUrl: ~
   - name: restaurants-05-LaMar
     caption: Salmon at La Mar Cebicheria Peruana
+    videoUrl: ~
   - name: restaurants-06-LaMar2
     caption: Ahi Tuna at La Mar Cebicheria Peruana
+    videoUrl: ~
   - name: restaurants-07-LaMar3
     caption: Appetizer at La Mar Cebicheria Peruana
+    videoUrl: ~
+- title: video
+  slug: /video
+  description: Videos.
+  photos:
+  - name: video-01-MaraAlexWedding
+    caption: Mara and Alex's Wedding.
+    videoUrl: https://youtu.be/5Z1WgnSeee4
+  - name: video-02-MuralPaintingMissyM
+    caption: Mural Painting by Missy M.  Music by Jason Martineau.  Unfinished.
+    videoUrl: https://youtu.be/RA-nSnuKYis
 
 
