--- a/src/portfolios/portfolios.yml
+++ b/src/portfolios/portfolios.yml
@@ -11,72 +11,114 @@
   - name: travel-03-NewYearsEveViewPearlTowerLobbyGrandHyatt
     caption: Pearl Tower, Shanghai from the lobby of Grand Hyatt.  China trip New Years Eve 2002, a trip that inspired me to work with light in dark environment.
     videoUrl: ~
-  - name: travel-04-TreviFountains
+  - name: travel-04-GirlwithaDolphinFountainTowerBridgeLondonMarch2002
+    caption: Girl with a Dolphin Fountain.  Tower Bridge, London, March 2002
+    videoUrl: ~
+  - name: travel-05-DJatMoorgBarcelonaAugust2002
+    caption: In August 2002, I traveled to Ibiza and Barcelona, Spain.  At The Moorg (club) in Barcelona, it was almost pitch dark other than a spotlight by the DJ booth that flashes on and off every second or so.  I took this photo with my Sony point & shoot digital camera by trapping the camera and keeping the shutter open between multiple flashes.  This shot was the shot that inspired me to want to work with the dynamic lighting conditions of dance music events.
+    videoUrl: ~
+  - name: travel-06-IguazuFallsBrazil2004
+    caption: Iguazu Falls Brazil 2004.
+    videoUrl: ~
+  - name: travel-07-IguazuFallsBrazil2004
+    caption: Iguazu Falls Brazil 2004.
+    videoUrl: ~
+  - name: travel-08-IguazuFallsBrazil2004
+    caption: Iguazu Falls Brazil 2004.
+    videoUrl: ~
+  - name: travel-09-TreviFountains2011
     caption: Trevi Fountain, Rome, Italy 2011. 
     videoUrl: ~
-  - name: travel-05-ColosseumRome
-    caption: Colosseum in Rome 2011.  Shot with fisheye lens.
+  - name: travel-10-ColosseumRome2011
+    caption: Colosseum.  Rome 2011.  Shot with fisheye lens.
     videoUrl: ~
-  - name: travel-06-PonteVecchioFlorence
+  - name: travel-11-PonteVecchioFlorence2011
     caption: Ponte Vecchio, Florence, Italy 2011.
     videoUrl: ~
-  - name: travel-07-MasqueradeMasksVenice
-    caption: Masquerade Masks, Venice, Italy 2011.
+  - name: travel-12-VeniceSunset2011
+    caption: Sunset view of Venice.  Italy 2011.
     videoUrl: ~
-  - name: travel-08-DJatMoorgBarcelonaAugust2002
-    caption: In 2002, I traveled to Ibiza and Barcelona, Spain.  At The Moorg (club) in Barcelona, it was almost pitch dark other than a spotlight by the DJ booth that flashes on and off every second or so.  I took this photo with my Sony point & shoot digital camera by trapping the camera and keeping the shutter open between multiple flashes.  This shot was the shot that inspired me to want to work with the dynamic lighting conditions of dance music events.
+  - name: travel-13-MasqueradeMasksVenice2011
+    caption: Masquerade Masks.  Venice, Italy 2011.
+    videoUrl: ~
+  - name: travel-14-MasqueradeMasksVenice2011
+    caption: Masquerade Masks.  Venice, Italy 2011.
+    videoUrl: ~
+  - name: travel-15-BoyWithFrogVenice2011
+    caption: Boy With Frog.  Venice, Italy 2011.
+    videoUrl: ~
+  - name: travel-16-BoyWithFrogVenice2011
+    caption: Boy With Frog.  Venice, Italy 2011.  For those of us that cringe at the site of this controversial statue, you may like to know it was removed in 2013.
+    videoUrl: ~
+  - name: travel-17-VillaCarlottaLakeComoItaly2011
+    caption: Statue fountain at entrance of Villa Carlotta, Lake Como, Italy 2011.
+    videoUrl: ~
+  - name: travel-18-TheFernValleyVillaCarlottaLakeComoItaly2011
+    caption: The fern valley, Villa Carlotta, Lake Como, , Italy 2011.
     videoUrl: ~
 - title: music
   slug: /music
   description: I had a passionate in electronic dance music that led to over a decade of covering electronic dance music events in San Francisco, across the States, and around the World, and managing the website, eventvibe.com.
   photos:
   - name: music-01-SanderVanDoornPOP033112
-    caption: Sander Van Doorn at Skill's ETD POP 3/31/12
+    caption: Sander Van Doorn at Skill's ETD POP 2012.
     videoUrl: ~
-  - name: music-02-SDMF071406
-    caption: Foam party at the Sun Dance Music Festival in Tallinn, Estonia 2006.
+  - name: music-02-DJ ValerieRubySkye100402
+    caption: DJ Valerie at Ruby Skye 2002.  This was the first event I shot where I realized what a strong connection the DJ have with their audience and it drove me to want to capture this energy.
     videoUrl: ~
-  - name: music-03-TriggerSFWhiteParty040310
-    caption: White Party at Trigger in San Francisco 4/30/10.
+  - name: music-03-PachaIbiza071503
+    caption: The island of Ibiza, Spain is World reknown as a party destination.  Club Pacha, Ibiza 7/15/03.
     videoUrl: ~
-  - name: music-04-PachaIbiza071503
-    caption: Club Pacha, Ibiza, Spain 7/15/03.  My first of 3 trips to Ibiza.
+  - name: music-04-Eventvibe.comPoolPartySFLoveParade100204
+    caption: In 2004 the Love Parade came San Francisco.  I produced an eventvibe.com party the day after 10/2/04.
     videoUrl: ~
-  - name: music-05-MorilloSubliminalSpaceMiami032305
-    caption: Erick Morillo at Club Space in Miami during the Winter Music Conference 3/32/05.
+  - name: music-05-Eventvibe.comPoolPartyIbizaHotel2004
+    caption: Flyer for the Eventvibe.com Pool party 10/3/04 making use of pool party photos from Miami WMC 2003.  
     videoUrl: ~
-  - name: music-06-Eventvibe.comPoolPartySFLoveParade100204
-    caption: San Francisco Love Parade 10/2/04.  I produced an eventvibe.com party the day after.
+  - name: music-06-FrenchyLeFreakFluidYachtParty
+    caption: Every year in March, those in the electronic music industry gather in Miami for a week long of events and parties.  DJ Frenchy Le Freak at Fluid UltraLounge's Yacht party Miami Winter Music Conference (WMC) 2004. 
     videoUrl: ~
-  - name: music-07-Eventvibe.comPoolPartyIbizaHotel2004
-    caption: Flyer for the Eventvibe.com Pool party 10/3/04 making use of pool party photos from Miami Winter Conference 2003.  
+  - name: music-07-MorilloSubliminalSpaceMiami032305
+    caption: Erick Morillo at Subliminal Record's event at Club Space Miami during WMC 2005.
     videoUrl: ~
-  - name: music-08-MezzanineSFKaskadeRemedy10Year
-    caption: Kaskade at The Mezzanine in San Francisco.
+  - name: music-08-2ndSunday040613
+    caption: One of the most famous and long running house music party in San Francisco was 2nd Sunday every 2nd Sunday of the month during the summer months.  Photo taken in 2013. 
     videoUrl: ~
-  - name: music-09-SFPopArminVanBuuren
-    caption: Armin Van Burren at ETD Pop
+  - name: music-09-MezzanineSFKaskadeRemedy10Year
+    caption: From my first night out with Nikon D3s, which at the time took low photography to the next level.  Kaskade at The Mezzanine in San Francisco.
     videoUrl: ~
   - name: music-10-burningman090405
-    caption: Burning Man 2005.
+    caption: In 2005 I went to Burning Man.
     videoUrl: ~
   - name: music-11-TiestoBurningman090405
-    caption: Guest DJ Tiesto at the Opulent Temple at Burning Man 2005.
+    caption: DJ Tiesto was a surprise guest DJ at the Opulent Temple's camp at Burning Man 2005.  This shot was special to me because I had to climb up a scafford about 30 feet high with all my camera equipment to get it.  It also ended up been used on the flyer for an Opulent Temple fundraiser.
     videoUrl: ~
-  - name: music-12-SFOpulentMassiveTreasureIsland030609
-    caption: Liam Shy at Opulent Massive on Treasure Island.
+  - name: music-12-SasonBishopParryPlanetBVideo
+    caption: Sason Bishope Parry performs for Planet B's End of the World video shoot at Temple Nightclub in San Francisco 2006.
     videoUrl: ~
   - name: music-13-SF1015RaindanceChineseNewYear012706
     caption: Raindance Chinese New Year at 1015 Folsom 1/27/06
     videoUrl: ~
-  - name: music-14-SFMezzanineOM10Year020306
-    caption: Mark Farina at OM Records 10 Year Anniversary at The Mezzanine 2/3/06.
+  - name: music-14-SDMF071406
+    caption: Foam party at the Sun Dance Music Festival in Tallinn, Estonia 2006.
     videoUrl: ~
-  - name: music-15-CocoBongo010611
-    caption: Bongo Bongo at Playa del Carmen.
+  - name: music-15-TriggerSFWhiteParty040310
+    caption: White Party at Trigger in San Francisco 4/30/10.
     videoUrl: ~
-  - name: music-16-NYECocoBongoPlayadelCarmen010511
-    caption: Every night is New Years Eve at Coco Bongo.
+  - name: music-16-CocoBongo010611
+    caption: Beetlejuice at Bongo Bongo at Playa del Carmen 2011.
+    videoUrl: ~
+  - name: music-17-NYECocoBongoPlayadelCarmen010511
+    caption: Every night is New Years Eve at Coco Bongo 2011.
+    videoUrl: ~
+  - name: music-18-KaskadeElectricZooNYC090410
+    caption: Kaskade at Electric Zoo festival in NYC 2010.
+    videoUrl: ~
+  - name: music-19-SFPopArminVanBuuren
+    caption: Armin Van Burren at ETD Pop
+    videoUrl: ~
+  - name: music-20-TiestoZoukoutSingapore121110
+    caption: DJ Tiesto at Zoukout festival in Singapore 2010.
     videoUrl: ~
 - title: fashion
   slug: /fashion
@@ -85,36 +127,48 @@
   - name: fashion-01-BenSammieKateKnuvelderKenChen
     caption: Models Benjamin Kline and Sammie Smith in designer Ken Chen and jewelry designer Kate Knuvelder.
     videoUrl: ~
-  - name: fashion-02-CharlestonPierceFashionShow1
-    caption: Charleston Pierce Fashion Show - Evening wear.
+  - name: fashion-02-SFPressClubPretAPorter062610
+    caption: Pret-A-Porter fashion show at Press Club, San Francisco 6/26/10
     videoUrl: ~
-  - name: fashion-03-CharlestonPierceFashionShow2
-    caption: Charleston Pierce Fashion Show - Swimwear.
+  - name: fashion-03-CharlestonPierceFashionShowKarenCaldwell2013
+    caption: Charleston Pierce Fashion Show at Westin St. Westin 2013.  Featuring designer Karen Caldwell.
     videoUrl: ~
-  - name: fashion-04-MoniqueZhangWearableArt
+  - name: fashion-04-CharlestonPierceFashionShowZoeBikini2013
+    caption: Charleston Pierce Fashion Show at Westin St. Westin 2013.  Featuring designer Zoe Bikini.
+    videoUrl: ~
+  - name: fashion-05-CharlestonPierceFashionShow2013
+    caption: Charleston Pierce Fashion Show at Westin St. Westin 2013.
+    videoUrl: ~
+  - name: fashion-06-MoniqueZhangWearableArt
     caption: Designer Monique Zhang.  Spirit painting by Joshua Bernstein.  From Monique Zhang's Wearable Art Collection auctioned at San Francisco Beautiful's Annual Gala.
     videoUrl: ~
-  - name: fashion-05-MicheleGatesWearableArt
+  - name: fashion-07-MicheleGatesWearableArt
     caption: Socialite Michele Gates.  Designer Monique Zhang's Wearable Art.
     videoUrl: ~
-  - name: fashion-06-ScarlettLaceyBannister
+  - name: fashion-08-ScarlettLaceyBannister
     caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
     videoUrl: ~
-  - name: fashion-07-ScarlettLaceyBannister2
+  - name: fashion-09-ScarlettLaceyBannister
     caption: Model Scarlett Lash.  Designer Lacey Bannister's head dress.
     videoUrl: ~
-  - name: fashion-08-KateKnuvelderBlackV051212
+  - name: fashion-10-KateKnuvelderBlackV051212
     caption: Model Jessica Sanchez.  Designer Kate Knuvelder's chainmail head piece.  
     videoUrl: ~
-  - name: fashion-09-JessicaKateKnuvelder
-    caption: Black V Fashion Show.  Designer Kate Knuvelder's chainmail head piece 5/12/12.
+  - name: fashion-11-JessicaKateKnuvelder
+    caption: Black V Fashion Show.  Designer Kate Knuvelder's chainmail head piece.
     videoUrl: ~
-  - name: fashion-10-MichelleBenBW
+  - name: fashion-12-KateKnuvelder
+    caption: Necklace by designer Kate Knuvelder.
+    videoUrl: ~
+  - name: fashion-13-RomeoBarcelonaButterflyRebirth
+    caption: Struggling for Rebirth.  Model Romeo Barcelona.  Designer / stylist Kate Knuvelder.
+    videoUrl: ~
+  - name: fashion-14-MichelleBenBW
     caption: Models Michelle Grey and Benjamin Kline.
     videoUrl: ~
 - title: lifestyle
   slug: /lifestyle
-  description: Lifestyle photography is about collaboration to convey a certain lifestyle.
+  description: Fashion photography is ultimately about selling clothes.  Lifestyle photography is also a collaboration and is to convey a certain lifestyle.
   photos:
   - name: lifestyle-01-MichelleBen
     caption: Models Michelle Grey and Benjamin Kline.
@@ -208,35 +262,41 @@
   slug: /techEvents
   description: Technology conferences, expos, meetups, and hackathons.
   photos:
-  - name: techEvents-01-ChrisMurphyNiagraUnrealEngineGDC2019
-    caption: Chris Murphy giving presentation on Niagra VFX at Unreal Engine Learning Theater at Games Developer Conference GDC 2019
+  - name: techEvents-01-TonyParisi
+    caption: Tony Parisi is a VR pioneer, who later became the head of VR/AR at Unity.  After I experienced VR for the first time I knew I had to get back to developing technology again.  In 2016, I produced a podcast on VR, DopamineVR, and Tony hosted the show along with my friend David Oh.  (Side story - David was a partner at GasInk magazine, the first magazine I shot for in 2002)
     videoUrl: ~
   - name: techEvents-02-MikeySiegelConsciousnessVRmeetupUploadVR021917
-    caption: Mikey Siegel at the Consciousness VR meetup at Upload VR
+    caption: In 2017 UploadVR hosted a series of VR events.  Here Mikey Siegel of Consciousness Hacking gave a presentation at the Consciousness VR meetup.
     videoUrl: ~
-  - name: techEvents-03-Xtech051816
-    caption: XTech Experience Technology and NeuroGaming Conference and Expo 2016.
+  - name: techEvents-03-Xtech2017
+    caption: XTech Experiential Technology and NeuroGaming Conference and Expo 2017.
     videoUrl: ~
-  - name: techEvents-04-EmotivDemoXTech051816
-    caption: Emotive demo at XTech 2016.
+  - name: techEvents-04-AdamGazzaleyJazzVenturesXtech051816
+    caption: Neuroscentist Adam Gazzaley of UCSF's Neuroscape and JAZZ Venture Partners.  XTech 2016.
     videoUrl: ~
   - name: techEvents-05-TimFerrisAdamGazzaley
-    caption: Tim Ferris and Adam Gazzaley at XTech 2016.
+    caption: Tim Ferris, of 4-Hour Workweek and Tim Ferriss Show, and Adam Gazzaley.  XTech 2016.
     videoUrl: ~
-  - name: techEvents-06-AdamGazzaleyJazzVenturesXtech051816
-    caption: Neuroscentist Adam Gazzaley of UCSF's Neuroscape and JAZZ Venture Partners, at XTech 2016.
+  - name: techEvents-06-EmotivDemoXTech051816
+    caption: Emotiv demo'ing at XTech 2016.
     videoUrl: ~
   - name: techEvents-07-XTech051716
     caption: XTech 2016.
     videoUrl: ~
   - name: techEvents-08-XTechHackathon051416
-    caption: XTech hackathon 2016.
+    caption: XTech held a 2 day hackathon prior to the conference in 2016.
     videoUrl: ~
   - name: techEvents-09-XtechHackathon051416
-    caption: XTech hackathon 2016.
+    caption: Excited for your own Open BCI's brain computer interface.  XTech hackathon 2016.
     videoUrl: ~
   - name: techEvents-10-XtechHackathon051516
-    caption: XTech hackathon 2016.
+    caption: Hackathon project presentation.  XTech hackathon 2016.
+    videoUrl: ~
+  - name: techEvents-11-MicrodoseVR
+    caption: MicrodoseVR featuring the artwork of Android Jones is a VR experience I'm looking forward to.  Xtech 2017.  
+    videoUrl: ~
+  - name: techEvents-12-ChrisMurphyNiagraUnrealEngineGDC2019
+    caption: Chris Murphy giving a presentation on Niagra particle system for VFX at Unreal Engine Learning Theater at Games Developer Conference GDC 2019
     videoUrl: ~
 - title: restaurants
   slug: /restaurants
